--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+<!DOCTYPE html><html><head>
+	<title>Image Only</title>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+<p><img alt="Your Image" src="phishing.png"/></p>
 
-</html>
+
+</body></html>
