--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,17 @@
-<!DOCTYPE html><html><head>
-	<title>Image Only</title>
-</head>
-<body>
-<p><img alt="Your Image" src="phishing.png"/></p>
-
-
-</body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Responsive Resized Image</title>
+    <style>
+      img {
+        width: 100%;
+        height: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Responsive Resized Image</h2>
+    <p>Resize the browser to see the responsive effect:</p>
+    <img src="phishing.png" />
+  </body>
+</html>
