--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <body>
     <h2>Responsive Resized Image</h2>
     <p>Resize the browser to see the responsive effect:</p>
-    <img src="phishing.png" />
+    <img src="/my-first-static-web-app/phishing.png" />
   </body>
 </html>
