--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Responsive Resized Image</title>
+    <title>INFORMATION SECURITY</title>
     <style>
       img {
         width: 100%;
@@ -12,6 +12,6 @@
   <body>
     <h2>Responsive Resized Image</h2>
     <p>Resize the browser to see the responsive effect:</p>
-    <img src="/my-first-static-web-app/phishing.png" />
+    <img src="phishing.png" />
   </body>
 </html>
