--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     </style>
   </head>
   <body>
-    <h2>Responsive Resized Image</h2>
+    <h2>INFORMATION SECURITY</h2>
     <p>Resize the browser to see the responsive effect:</p>
-    <img src="phishing.png" />
+    <img src="/src/phishing_robot.png" />
   </body>
 </html>
