--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <body>
     <h2>INFORMATION SECURITY</h2>
     <p>Resize the browser to see the responsive effect:</p>
-    <img src="/src/phishing_robot.png" />
+    <img src="https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true" />
   </body>
 </html>
