--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>INFORMATION SECURITY</title>
+<head>
     <style>
-      img {
-        width: 100%;
-        height: auto;
-      }
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
     </style>
-  </head>
-  <body>
-    <h2>INFORMATION SECURITY</h2>
-    <p>Resize the browser to see the responsive effect:</p>
-    <img src="https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true" />
-  </body>
+</head>
+<body>
+  <h2>INFORMATION SECURITY v1.2</h2>
+<div class="imgbox">
+    <img class="center-fit" src='https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true'>
+</div>
+</body>
 </html>
