--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
-<body>
-  <img src="https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true" />
-</body>
+
+div {
+  background-image: url("https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true");
+  background-size: cover;
+}
