--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,18 @@
+<!DOCTYPE html>
+<html>
 <head>
 <style>
-.container { 
-  height: 200px;
-  position: relative; 
-}
-
-.center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 </style>
 </head>
 <body>
-<div class="container">
-  <div class="center">
-    <img src='https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true'>
-  </div>
-</div>
+
+<img src='https://github.com/wakeonwan/my-first-static-web-app/blob/main/src/phishing_robot.png?raw=true' style="width:40%">
 
 </body>
 </html>
+
